# ftpd-rs

./: Cargo.toml  build.sh
scripts/: build.py
src/: ftpd.rs  lib.rs  logger.rs
